--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,10 @@
 
-
-
-.rowOperators {
-    vertical-align: top;
-    text-align: left;
-    display: inline-block;
-}
-.view {
-    width: 900px;
+.scrollableX {
     overflow-x: scroll;
-    overflow-y: hidden;
-    display: inline-block;
 }
-.legend {
-    vertical-align: top;
-     text-align: left;
-    display: inline-block;
-}
+
 .customTooltip{
-    background: white;
-    opacity: 0.9;
-    padding-left: 10px;
-    padding-right: 10px;
-    border: 1px solid black;
     pointer-events: none;
-}
-
-
-.heatmapContainer {
-    white-space: nowrap;
-
 }
 
 .clickable:hover {
@@ -40,15 +15,11 @@
     display: none;
 }
 
-.btn{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
 .defaultView{
     position: absolute;
     left: 50%;
-    margin-top: 20%;
+    top:50%;
+    margin-top: -50px;
     margin-left: -100px;
     width: 300px;
     height: 100px;
@@ -72,7 +43,27 @@
     padding: 2px;
     font-size: 10px;
 }
-#sidebar{
-    height: 100%;
+.btn{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
+.sidebar{
+    margin-left:0;
+    padding: 0;
+    height: 100%;
+    background-color: #efefef;
+}
+.helperAxis{
+    float:left;
+        white-space: nowrap;
+
+}
+.rowOperators{
+    float:left;
+    white-space: nowrap;
+
+}
+
 
