--- a/public/style.css
+++ b/public/style.css
@@ -60,8 +60,8 @@
         white-space: nowrap;
 
 }
-.rowOperators{
-    float:left;
+.noSizeChange{
+    display:inline-block;
     white-space: nowrap;
 
 }
