global layout updated to keep the plot, bands together
fixes #94

--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,12 @@
     overflow-x: scroll;
 }
 
+.overlaid {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
 .customTooltip{
     pointer-events: none;
 }
