implemented sorting in variable manager, made table scrollable

--- a/public/style.css
+++ b/public/style.css
@@ -121,5 +121,28 @@
   min-width: 100%;
   width: auto;
 }
+.fixed_header{
+    width: 400px;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+.fixed_header tbody{
+  display:block;
+  width: 100%;
+  overflow: auto;
+  max-height: 400px;
+}
+
+.fixed_header thead tr {
+   display: block;
+}
+
+
+.fixed_header th, .fixed_header td {
+  padding: 5px;
+  text-align: left;
+  width: 200px;
+}
 
 
