implementing combine Button and fixing some bugs

--- a/public/style.css
+++ b/public/style.css
@@ -123,15 +123,13 @@
 }
 .fixed_header{
     width: 400px;
-    table-layout: fixed;
-    border-collapse: collapse;
 }
 
 .fixed_header tbody{
   display:block;
   width: 100%;
   overflow: auto;
-  max-height: 400px;
+  height: 400px;
 }
 
 .fixed_header thead tr {
@@ -144,5 +142,4 @@
   text-align: left;
   width: 200px;
 }
-
 
