--- a/public/style.css
+++ b/public/style.css
@@ -16,8 +16,7 @@
 }
 
 .wordBreak {
-    word-break: break-all;
-
+    white-space: pre-wrap;
 }
 
 .customTooltip {
@@ -34,13 +33,18 @@
 }
 
 .defaultView {
+    width: 400px;
     position: absolute;
+    top: 35%;
     left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.middle {
+    position: absolute;
     top: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
-    width: 300px;
-    height: 100px;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .noStyle {
@@ -96,4 +100,63 @@
 
 }
 
+.Select-input {
+    position: absolute !important;
+    top: 0 !important;
+}
+
+.Select-value-label {
+    display: block !important;
+}
+
+.Select-value {
+    position: relative !important;
+}
+
+.Select-menu-outer {
+    width: auto;
+    min-width: 100%;
+}
+
+.Select-option {
+    white-space: nowrap;
+}
+
+.Select-control {
+    min-width: 100%;
+    width: auto;
+}
+
+.bigLoader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    margin: -60px 0 0 -60px;
+    animation: spin 2s linear infinite;
+}
+
+.smallLoader {
+    margin: 20px auto 0;
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
