--- a/public/style.css
+++ b/public/style.css
@@ -151,6 +151,13 @@
     animation: spin 2s linear infinite;
 }
 
+.pane-inactive {
+    border-right: 1px solid #f0f0f0;
+}
+.pane-active{
+    background-color: rgba(150,150,150,0.1);
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
