Fixing slow scrolling bug and updating change rate computation with ranges for molecular profiles

--- a/public/style.css
+++ b/public/style.css
@@ -95,6 +95,7 @@ small spinning study loader
 .fullSizeModal{
     min-width: 95VW;
     height: 90VH;
+    -webkit-overflow-scrolling: touch;
 }
 
 
