--- a/public/style.css
+++ b/public/style.css
@@ -99,3 +99,11 @@ small spinning study loader
 }
 
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
