--- a/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
+++ b/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
@@ -26,5 +26,7 @@
   }
 
   .customGrouping{
-    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28)
+    /* box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28) 
+    */
+    border: 0.5px solid #ccc
   }
