add link&point animation

--- a/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
+++ b/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
@@ -30,3 +30,21 @@
     */
     border: 0.5px solid #ccc
   }
+
+  circle.point{
+    transition: all 400ms ease-in-out;
+  }
+
+  
+
+  path.curve {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    animation: dash 1s linear forwards;
+  }
+  
+  @keyframes dash {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
