align event with the flows

--- a/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
+++ b/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
@@ -35,6 +35,9 @@
     transition: all 400ms ease-in-out;
   }
 
+  path.pcpLine, line.axis {
+    transition: width 400ms ease-in-out;
+  }
   
 
   path.curve {
