parset enable add dimensions

--- a/src/modules/TemporalHeatmap/components/CustomGrouping/ParSet.css
+++ b/src/modules/TemporalHeatmap/components/CustomGrouping/ParSet.css
@@ -31,3 +31,13 @@
   position: absolute;
   padding: 5px;
 }
+
+svg text {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+svg text::selection {
+  background: none;
+}
