--- a/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
+++ b/src/modules/TemporalHeatmap/components/CustomGrouping/CustomGrouping.css
@@ -25,11 +25,10 @@
     fill:#EC888C;
   }
 
-  div.customGrouping{
-    /* box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28) 
-    */
+  /* div.customGrouping{
+    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28) 
     border: 0.5px solid #ccc
-  }
+  } */
 
   g.glyph{
     transition: all 400ms ease-in-out;
